--- a/src/components/context/Context/Context.css
+++ b/src/components/context/Context/Context.css
@@ -5,3 +5,127 @@
     left: 360px;
     top: 64px;
 }
+
+#callsContainer {
+    position: absolute;
+    width: 1440px;
+    height: 1985px;
+    left: 0px;
+    top: 135px;
+    
+    background: var(--primary-white);
+    
+    box-shadow: 0px 4px 5px var(--header-box-shadow);
+    border-radius: 8px;
+}
+
+#callsFlexContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 20px;
+    
+    position: absolute;
+    width: 1440px;
+    height: 1904px;
+    left: 0px;
+    top: 24px;
+}
+
+#callsListHeader {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 6px;
+    
+    width: 1440px;
+    height: 16px;
+        
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+#callsListHeaderContainer {
+    width: 1440px;
+    height: 16px;
+    position: relative;
+        
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+
+#callsHeaderType {
+    position: absolute;
+    left: 2.78%;
+    right: 95.62%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsHeaderTime {
+    position: absolute;
+    left: 6.46%;
+    right: 90.69%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsHeaderEmployees {
+    position: absolute;
+    left: 12.64%;
+    right: 82.64%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsHeaderCall {
+    position: absolute;
+    left: 21.53%;
+    right: 75.35%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsHeaderSource {
+    position: absolute;
+    left: 44.17%;
+    right: 51.67%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsHeaderRating {
+    position: absolute;
+    left: 59.03%;
+    right: 37.71%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsHeaderDuration {
+    position: absolute;
+    left: 91.04%;
+    right: 2.78%;
+    top: 12.5%;
+    bottom: 0%;
+}
+
+#callsList {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    position: absolute;
+    width: 1440px;
+    height: 1075px; /**/
+    left: 0px;
+    top: 36px;
+    
+    border: 1px solid red;
+}
