--- a/src/components/context/filtersAndSearch/FiltersAndSearch/FiltersAndSearch.css
+++ b/src/components/context/filtersAndSearch/FiltersAndSearch/FiltersAndSearch.css
@@ -76,8 +76,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: flex-start;
     padding: 0px;
-    gap: 4px;
+    gap: 5px;
     position: relative;
     
     height: 21px;
@@ -85,6 +86,15 @@
     flex: none;
     order: -1;
     flex-grow: 0;
+}
+
+#filtersClose button{
+   padding: 0;
+   border: none;
+   outline: none;
+   width: 15px;
+   height: 15px;
+   background: var(--call-page-background);
 }
 
 #filtersClose.headerBarText {
