--- a/src/components/context/Context/Context.css
+++ b/src/components/context/Context/Context.css
@@ -1,127 +1,101 @@
 #contextContainer {
-    position: absolute;
     width: 1440px;
-    left: 360px;
-    top: 64px;
-    bottom: 546px;
+    
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.balanceAndDatePickerContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 48px;
+
+    padding: 20px 0 34px 0;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.filtersAndSearchContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
 }
 
 #callsContainer {
-    position: absolute;
-    width: 1440px;
-    left: 0px;
-    top: 135px;
-    bottom: 0px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    margin-bottom: 546px;
+    width: 100%;
+
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+
     background: var(--primary-white);
     
     box-shadow: 0px 4px 5px var(--header-box-shadow);
     border-radius: 8px;
 }
 
-#callsFlexContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 20px;
-    
-    position: absolute;
-    width: 1440px;
-    height: 1904px;
-    left: 0px;
-    top: 24px;
-}
-
 #callsListHeader {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
-    gap: 6px;
+    padding-top: 2px;
+    margin: 24px 0 21px 0;
     
-    width: 1440px;
-    height: 16px;
+    width: 100%;
         
     flex: none;
     order: 0;
     flex-grow: 0;
 }
 
-#callsListHeaderContainer {
-    width: 1440px;
-    height: 16px;
-    position: relative;
-        
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-}
 
 #callsHeaderCheckbox {
-    position: absolute;
-    left: 0.83%;
-    right: 98.06%;
-    top: 6.25%;
-    bottom: -6.25%;
-
     display: none;
 }
 
 #callsHeaderType {
-    position: absolute;
-    left: 2.78%;
-    right: 95.62%;
-    top: 12.5%;
-    bottom: 0%;
+    margin: 0 30px 0 40px;
 }
 
 #callsHeaderTime {
-    position: absolute;
-    left: 6.46%;
-    right: 90.69%;
-    top: 12.5%;
-    bottom: 0%;
+    margin-right: 48px;
 }
 
 #callsHeaderEmployees {
-    position: absolute;
-    left: 12.64%;
-    right: 82.64%;
-    top: 12.5%;
-    bottom: 0%;
+    margin-right: 60px;
 }
 
 #callsHeaderCall {
-    position: absolute;
-    left: 21.53%;
-    right: 75.35%;
-    top: 12.5%;
-    bottom: 0%;
+    margin-right: 281px;
 }
 
 #callsHeaderSource {
-    position: absolute;
-    left: 44.17%;
-    right: 51.67%;
-    top: 12.5%;
-    bottom: 0%;
+    margin-right: 154px;
 }
 
 #callsHeaderRating {
-    position: absolute;
-    left: 59.03%;
-    right: 37.71%;
-    top: 12.5%;
-    bottom: 0%;
+    margin-right: 414px;
 }
 
 #callsHeaderDuration {
-    position: absolute;
-    left: 91.04%;
-    right: 2.78%;
-    top: 12.5%;
-    bottom: 0%;
+    margin-right: 40px;
 }
 
 #callsList {
@@ -130,20 +104,13 @@
     align-items: flex-start;
     padding: 0px;
 
-    position: absolute;
-    width: 1440px;
-    height: 100%;
-    left: 0px;
-    top: 36px;
-    overflow-y: auto;
-}
-
-#callsList::-webkit-scrollbar {
-    width: 0px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
 }
 
 .dateOfParsedCalls {
-    width: 1400px;
+    width: 100%;
     height: 78px;
     position: relative;
 
