--- a/src/components/header/Header/Header.css
+++ b/src/components/header/Header/Header.css
@@ -1,9 +1,9 @@
 #headerContainer {
-    position: absolute;
-    width: 1680px;
     height: 64px;
-    left: 240px;
-    top: 0px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
     background: var(--primary-white);
 
@@ -11,23 +11,16 @@
 }
 
 #headerContainer .date {
-    position: absolute;
-    height: 22px;
-    left: 120px;
-    top: calc(50% - 22px/2);
-
     display: flex;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
+
+    padding-left: 120px;
 
     color: var(--header-text);
 }
 
 #headerSearch {
-    position: absolute;
-    left: 64.23%;
-    right: 33.87%;
-    top: 12.5%;
-    bottom: 12.5%;
     border: none;
 }
 
@@ -36,33 +29,32 @@
 }
 
 #headerContainer .headerNameText {
-    position: absolute;
-    width: 262px;
-    height: 21px;
-    left: 1167px;
-    top: calc(50% - 21px/2 - 0.5px);
+    position: relative;
     
     display: flex;
-    align-items: flex-end;
-    text-align: right;    
+    align-items: center;
+    text-align: right;
+    padding-left: 64px;
 }
 
 #headerImage {
-    position: absolute;
-    width: 68px;
-    height: 40px;
-    left: 1497px;
-    bottom: 12px;
+    position: relative;
+
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    padding-left: 46px;
+    padding-right: 115px;
 }
 
 #headerNameArrowButton {
-    position: absolute;
-    left: 85.3%;
-    right: 13.27%;
-    top: 32.81%;
-    bottom: 29.69%; 
+    position: relative;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
 }
